# fareeda-dried-fruit

./: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  LICENSE  README.md  SETUP.md  docker-compose.yml  main.py  package.json  requirements.txt  run.py  setup-production-environment.js  start-system.bat  start-system.sh  start.bat  start.sh  stop-system.bat  stop-system.sh  test-e2e-workflows.js  test_branch_login.py  tsconfig.json
.github/: WORKFLOW_README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts  server.ts
database/init/: 01-init.sql  02-users.sql  03-branches.sql  04-products.sql  05-inventory.sql  06-orders-sales.sql  06_barcode_schema.sql  07-shipping.sql  07_shipping_schema.sql  08-permissions-seed.sql  08_sales_schema.sql  09_delivery_confirmation_schema.sql  10_low_stock_alerts_schema.sql  11_sampling_management_schema.sql  12_procurement_schema.sql  13_reporting_analytics_schema.sql  14_comprehensive_seed_data.sql  15_historical_transactions.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
python-fastapi-system/: .env.example  pyproject.toml
python-fastapi-system/app/: __init__.py
python-fastapi-system/app/api/: __init__.py  dependencies.py
python-fastapi-system/app/core/: config.py  database.py  security.py
python-fastapi-system/app/models/: __init__.py  alert.py  analytics.py  barcode.py  base.py  branch.py  inventory.py  procurement.py  product.py  repack.py  sales.py  sampling.py  shipping.py  user.py
python-fastapi-system/app/schemas/: auth.py  user.py
web/: add-branch.html  auto-branch-setup.html  branch-analytics.html  branch-approval.html  branch-delivery-routes.html  branch-details.html  branch-inventory.html  branch-management.html  bulk-branch-operations.html  dashboard.html  employee-management.html  goods-receipt-form.html  goods-receipt.html  index.html  inventory.html  mall-comparison.html  print-functions.js  product-management.html  purchase-form.html  purchase.html  sales-live-feed.html  sales-pos.html  sales-reports.html
(+287 files in other folders)
